<resources>
    <string name="app_name">DreamTheater</string>
    <!--    add-->
    <string name="title_home">TRANG CHỦ</string>
    <string name="title_theather">RẠP CHIẾU</string>
    <string name="title_favorites">Yêu thích</string>
    <string name="title_personal">CÁ NHÂN</string>

    <string name="test_introduction_film">Lần đầu tiên trong lịch sử điện ảnh của Người Nhện, thân phận người hàng xóm thân thiện bị lật mở, khiến trách nhiệm làm một Siêu Anh Hùng xung đột với cuộc sống bình thường và đặt người anh quan tâm nhất vào tình thế nguy hiểm. Khi anh nhờ đến giúp đỡ của Doctor Strange để khôi phục lại bí mật, phép thuật đã gây ra lỗ hổng thời không, giải phóng những ác nhân mạnh mẽ nhất từng đối đầu với Người Nhện từ mọi vũ trụ. Bây giờ, Peter sẽ phải vượt qua thử thách lớn nhất của mình, nó sẽ thay đổi không chỉ tương lai của chính anh mà còn là tương lai của cả Đa Vũ Trụ.</string>
    <string name="test_title_film">NGƯỜI NHỆN KHÔNG CÒN NHÀ</string>
    <string name="dat_ve">Đặt vé</string>

    <string name="login">Đăng nhập</string>
    <string name="DontHaveAccountYet">Chưa có tài khoản?</string>
    <string name="tvLogin">Đăng nhập</string>
    <string name="forgottenPassword">Quên mật khẩu?</string>
    <string name="tvRegister">Đăng ký!</string>

    <string name="API_KEY">AIzaSyCh4voT0O5DwVz8rwzKu7Fu89zGeR5WcxE</string>


    <!--    fb required-->
    <string name="facebook_application_id">7192728940769261</string>
    <string name="fb_login_protocol_scheme">fb7192728940769261</string>
    <string name="facebook_client_token">b56e9cb5bfe19f270d7975b394072daf</string>

    <string name="register">Đăng ký</string>
    <string name="what_is_your_name">Tên của bạn là gì?</string>
    <string name="user_Name">Tên đăng nhập</string>
    <string name="Confirm_Password">Nhập lại Password</string>
    <string name="Input_PhoneNum">Số điện thoại của bạn?</string>
    <string name="title_account">Tài khoản</string>


    <string-array name="genres_array">
        <item>All</item>
        <item>Drama</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Horror</item>
        <item>Comedy</item>
        <item>Romance</item>
        <item>Documentary</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="director">Đạo diễn: </string>
    <string name="cast">Diễn viên: </string>
    <string name="movieName">Tên phim</string>
    <string name="book">Đặt vé</string>
    <string name="book_now">Đặt vé ngay</string>
    <string name="content_string" translatable="false">description</string>
    <string name="booking">Đặt vé</string>
    <string name="search_hint">Tìm phim</string>
    <string name="search_title">Tìm kiếm</string>
    <string name="your_balanced_is">"Tài khoản của bạn chỉ còn "</string>
    <string name="it_is_not_enough">₫, it\'s không đủ để thanh toán</string>
    <string name="screen">Màn hình</string>
    <string name="sending_data">Đang đặt vé …</string>
    <string name="server_client_id">359747608446-hevnr087e283h3v438c9eqq5sser41mi.apps.googleusercontent.com</string>

    //Message
    <string name="signin_success">Sign-in Successfully</string>
    <string name="signin_cancel">Sign-in Canceled</string>
    <string name="signin_error">Sign-in Failed</string>
    <string name="signup_success">Sign-up Successfully</string>
    <string name="is_updating">Updating…</string>
    <string name="profile_updated">Profile updated</string>

    //Error
    <string name="fullname_empty">Tên đầy đủ không thể để trống!</string>
    <string name="email_empty">Email không được bỏ trống!</string>
    <string name="email_invalid">Email không đúng!</string>
    <string name="password_empty">Mật khẩu không được để trống</string>
    <string name="password_length">"Mật khẩu phải có tối thiểu 6 ký tự"</string>
    <string name="retype_empty">Retype password cannot be blank</string>
    <string name="retype_match">Retype and password do not match</string>
    <string name="terms_confirm">Please read and confirm our Terms and Privacy</string>
    <string name="mail_fail">Mail was not sent due to some problems.</string>

    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="director_string">Đạo diễn</string>
    <string name="cast_string">Diễn viên:</string>
    <string name="log_out">Đăng xuất</string>
    <string name="update">Cập nhật</string>
    <string name="notiUser">Vui lòng đem theo vé điện tử này đến rạp để nhận vé hoặc check-in.</string>
    <string name="notiQR">Nếu QR không hiển thị - vui lòng nhấn tạo QR bằng nút ở góc phải .</string>
    <string name="dream_thank_you">Dream Cinema xin cảm ơn ạ!</string>
    <string name="your_purchase">Hóa đơn của bạn</string>
    <string name="Customer">Người dùng :</string>
    <string name="default_name">Tên người dùng</string>
    <string name="title_movie">Phim :</string>
    <string name="movie_name">Sample movie name</string>
    <string name="please_choose_seat">Vui lòng chọn ghế</string>
    <string name="pay_now">Thanh toán ngay</string>
    <string name="seat_list">Ghế đã chọn:</string>
    <string name="total_payment">Tổng tiền:</string>
    <string name="pay_amount">0 ₫</string>
    <string name="not_enough_balance">Tài khoản is 1000 vnđ, it\'s not enough</string>
    <string name="watch_trailer">Xem trailer</string>
    <string name="title_list_cinema">Danh sách rạp</string>
    <string name="btn_back_description">Back</string>
    <string name="sample_cinema_name">CGV Hùng Vương Plaza</string>
    <string name="sample_address">Tầng 2, Thảo Điền Mall, 12 Quốc Hương, Phường Thảo Điền, Quận 2, TP. Hồ Chí Minh</string>
    <string name="sample_phone">19006677</string>
    <string name="sample_cast">Hứa Vĩ Văn, Thu Trang, Kiều Minh Tuấn, Tiến Luật, Huỳnh Phương, Quang Tuấn, Vũ Ngọc Anh, Thanh Mỹ.</string>
    <string name="ops">Opp!! Lỗi lỗi lỗi!!</string>
    <string name="sample_movie_title">DOCTOR STRANGE - MULTI VERSE</string>
    <string name="login_with_facebook">Đăng nhập bằng facebook</string>
    <string name="splash_description">Hệ thống rạp chiếu phim hiện đại toàn cầu</string>
    <string name="login_slogan">Nơi trải nghiệm phim tốt nhất cho bạn</string>
    <string name="button_login_google">Đăng nhập Google</string>
    <string name="tab_spotlight_title">SPOTLIGHT</string>
    <string name="tab_nowshowing_title">ĐANG CHIẾU</string>
    <string name="tab_incoming_title">SẮP CHIẾU</string>
    <string name="cinema_ticket_name">CGV HÙNG VƯƠNG PLAZA</string>
    <string name="movie_type">2D/Digital</string>
    <string name="date">Ngày</string>
    <string name="description_ticket_back_button">BACK TO MAIN</string>
    <string name="qrGenerate">qrGenerate</string>
    <string name="ticket_img_content">default_img</string>
    <string name="sample_ticket_date">12/01/2019</string>
    <string name="ticket_soget">Ghế :</string>
    <string name="tong_thanh_toan">Tổng thanh toán :</string>
    <string name="ticket_content_qrcode">qrcode</string>
    <string name="ticket_sample_price">200000 vnd</string>
    <string name="ticket_sample_seats">A2 C3 H1</string>
    <string name="save_qr_string">Lưu mã QR</string>
    <string name="profile_detail">Account Information</string>
    <string name="control_center_for_admin">Control Center ( for admin )</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="choose_movies_for_now_showing">Choose Movies for Now Showing</string>
    <string name="choose_movies_for_up_coming">Choose Movies for Up Coming</string>
    <string name="loading">Sending…</string>
    <string name="load_live">Updating live data…</string>
    <string name="choose_cinemas_for_showing">Choose Cinemas for Showing</string>
    <string name="save_change">SAVE CHANGE</string>
    <string name="add_new_movie">Add new movie</string>
    <string name="all_movies">All Movies</string>
    <string name="alert_leaving">Tất cả mọi thứ sẽ bị mất nếu bạn rời khỏi!</string>
    <string name="ok_i_know">OK, Tôi biết mà!</string>
    <string name="auto_id">( ID tự động )</string>
    <string name="creating_new_id">Tạo mới ID …</string>
    <string name="fail_to_create_id">Không thể tạo mới ID, vui lòng tải lại trang!</string>
    <string name="note_youtube_link" translatable="false"><![CDATA[* Valid youtube link format should be like\nhttps://www.youtube.com/watch?v=abc_xyz, or\nhttps://youtu.be/abc_xyz]]></string>
    <string name="check" translatable="false">Check</string>
    <string name="youtube_pattern_id" translatable="false"><![CDATA[(?<=watch\\?v=|/videos/|embed\\/|youtu.be\\/|\\/v\\/|\\/e\\/|watch\\?v%3D|watch\\?feature=player_embedded&v=|%2Fvideos%2F|embed%‌​2F|youtu.be%2F|%2Fv%2F)[^#\\&\\?\\n]*]]></string>
    <string name="autoplay_youtube_pattern" translatable="false">\?autoplay=1</string>
    <string name="choose_feature_movies">Chọn phim đặc biệt</string>
    <string name="choose_up_coming_movies">Chọn phim Sắp chiếu</string>
    <string name="choose_now_showing_movies">Chọn phim đang chiếu</string>
    <string name="exist_movie_alert">Using a Movie ID which already exists will update that movie</string>
    <string name="all_cinemas">Tất cả các rạp</string>
    <string name="choose_showing_cinemas">Chọn rạp Showings</string>
    <string name="add_new_cinema">Thêm rạp mới</string>
    <string name="cinema_management">Quản lý rạp</string>
    <string name="detail">Chi tiết</string>
    <string name="exist_cinema_alert">Using a Cinema ID which already exists will replace that cinema</string>
    <string name="address">Địa chỉ : %s</string>
    <string name="add_update_show_times">Thêm/Sửa Show Times</string>

    <!--  we need to use video ids instead of video link  -->
    <string-array name="video_id_array">
        <item>CqhpNxI8qYw</item>
        <item>sasCrpgHDy8</item>
        <item>iJeh3x09Ya8</item>
        <item>B5zRaD7B504</item>
        <item>9qWHzj8k-Uo</item>
        <item>RjiK45wC924</item>
        <item>RH3zaLO8H4E</item>
        <item>o14pyzosjvk</item>
        <item>5SQrpBQne7A</item>
        <item>5WJ3r67ORxo</item>
    </string-array>
    <string name="title_activity_dream_location">DreamLocation</string>
    <string name="movie_manegement">Quản lý phim</string>
    <string name="admin_dashboard">Trang Quản Trị</string>
    <string name="all_film_in_db">Tất cả phim trong cơ sở dữ liệu</string>
    <string name="add_new_film">Thêm phim mới</string>
    <string name="choose_recharge_provider">Vui lòng chọn phương thức nạp tiền</string>
    <string name="sending_recharge_order">Đang thực hiện thanh toán ...</string>

</resources>