<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.TheatherFragment"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBackToHome"
            android:layout_width="50dp"
            android:paddingVertical="15dp"
            android:layout_height="?attr/actionBarSize"
            app:srcCompat="@drawable/ic_back_button"
            android:contentDescription="@string/btn_back_description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_list_cinema"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cinema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:listitem="@layout/item_cinema_tab"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/setting_label_color"
        android:textStyle="bold"
        android:text="@string/ops"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone" />

</LinearLayout>