<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/panel"
    android:background="@drawable/black_rounded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_margin="5dp"
            android:elevation="6dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="4dp"
            android:src="@drawable/movie_img"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/movieName"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tvRating"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/FlatYellow"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="10.0"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <HorizontalScrollView
            android:id="@+id/scroll_view_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingHorizontal="5dp"
            android:scrollbars="none"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:contentDescription="@string/movie_type"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="@id/tvRating"
            >

            <LinearLayout
                android:id="@+id/type_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/director_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/director"
            android:textColor="#607D8B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/tvDirector" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Director Name"
            android:textColor="#CFD8DC"
            android:textSize="14sp"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_view_type"
            app:layout_constraintBottom_toTopOf="@id/cast_text"
            app:layout_constraintStart_toEndOf="@id/director_text"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView

            android:id="@+id/cast_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textColor="#607D8B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/txt_actors" />

        <TextView
            android:id="@+id/txt_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textColor="#CFD8DC"
            android:textSize="14sp"
            android:maxLines="3"
            android:text="@string/sample_cast"
            app:layout_constraintTop_toBottomOf="@id/tvDirector"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cast_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>